samples/_failures_safe/1761212112_bc2509_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ceeed28.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_0ceeed28.c:165:9: error: expected expression at end of input
  165 |         char unknown[2] = {current,
      |         ^~~~
./samples/SAFE/__tmp_0ceeed28.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0ceeed28.c:165:9: error: expected declaration or statement at end of input
